R1.5.1      03/23/2021    Kukhee Kim
            add Beam Charge Override

R1.5.0      03/23/2021    Matt Weaver
            UPgrade conditional from 8 bits to 12 bits
            Move tpr_record to other package
            Added some tpr utilites and some fixes to sequence programming scripts
            Add timing mode selection to hps_peak
            Updates to test scripts during EIC/MPS testing

R1.4.1      11/30/2020    Kukhee Kim
            add exception handloing for individual register access

R1.4.0      05/13.2020    Kukhee Kim
            static build and force tagging

R1.4.0      01/29/2020    Kukhee Kim
            build with cpsw/framework R4.4.1 and bsa R1.2.0, buildroot-2019.08

R1.3.7      12/11/2019    Kukhee Kim
            build with cpsw/framework R4.3.1 and bsa R1.1.5

R1.3.6      09/20/2019    Kukhee Kim
            build with cpsw/framework R4.2.0 and bsa R1.1.4

R1.3.5      06/25/2019    Kukhee Kim
            build with cpsw/framework R4.1.2 and bsa R1.1.3

R1.3.4      04/19/2019    Kukhee Kim / Matt Weaver
            add fault buffer holdoff
            pick up latest sub-modules and  register name changes to follow up new yaml files

R1.3.3      02/12/2019    Kukhee Kim
            add Mps communication diagnostics - RxFrameErrorCount and RxFrameCount
            register name change in Pgp2bAxi.yaml

R1.3.2      08/27/2018    Kukhee Kim
            Bug fixing for setBaseDivisor()

R1.3.1      07/24/2018    Kukhee Kim
            Bumpup cpsw framework R3.6.4
            Bumpup bsa api R1.1.1
            Read out TxClCount from TimingFrameRx to detect RF clcok disruption

R1.3.0      03/21/2018    Kukhee Kim
            Bumpup cpsw framework R3.6.3
            Bumpup bsa api R1.1.0

R1.2.8      11/27/2017    Kukhee Kim / Matt Weaver
            Add mps link/communication diagnostics API
            Fix return value for sequence_engine::cache(int); remove exception
            Make common sequser.py python import