@@ -1,3 +1,6 @@
+R1.5.2      04/09/2021    Kukhee Kim
+            add JesdRx reset
+
 R1.5.1      03/23/2021    Kukhee Kim
             add Beam Charge Override
 
